--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
     
     steps:
     - name: 🔄 Clonar repositório
-    - uses: actions/checkout@v4
+      uses: actions/checkout@v4
       
     - name: 📤 Deploy pasta public_html/
       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
