--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,22 +1,70 @@
-# Dharma Labs - URL Rewrite Rules
+# ==================================================
+# DHARMA LABS - CONFIGURAÇÃO AVANÇADA
+# ==================================================
+
 RewriteEngine On
 
-# Remover extensão .html das URLs
+# --------------------------------------------------
+# URL REWRITING - REMOVER EXTENSÕES
+# --------------------------------------------------
+
+# Remover .html das URLs
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^([^\.]+)$ $1.html [NC,L]
 
-# Redirecionar URLs com .html para versões sem extensão
+# Redirecionar .html para versão limpa (301 permanente)
 RewriteCond %{THE_REQUEST} /([^.]+)\.html [NC]
 RewriteRule ^ /%1? [NC,L,R=301]
 
-# Definir index.html como página padrão
-DirectoryIndex index.html
+# --------------------------------------------------
+# CONFIGURAÇÕES DE CACHE
+# --------------------------------------------------
 
-# Remover trailing slash (opcional)
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)/$ /$1 [R=301,L]
+<IfModule mod_expires.c>
+    ExpiresActive On
+    ExpiresByType text/css "access plus 1 year"
+    ExpiresByType application/javascript "access plus 1 year"
+    ExpiresByType image/png "access plus 1 year"
+    ExpiresByType image/jpg "access plus 1 year"
+    ExpiresByType image/jpeg "access plus 1 year"
+    ExpiresByType image/gif "access plus 1 year"
+    ExpiresByType image/svg+xml "access plus 1 year"
+</IfModule>
 
-# Headers de segurança (bonus)
+# --------------------------------------------------
+# COMPRESSÃO GZIP
+# --------------------------------------------------
+
+<IfModule mod_deflate.c>
+    AddOutputFilterByType DEFLATE text/plain
+    AddOutputFilterByType DEFLATE text/html
+    AddOutputFilterByType DEFLATE text/xml
+    AddOutputFilterByType DEFLATE text/css
+    AddOutputFilterByType DEFLATE application/xml
+    AddOutputFilterByType DEFLATE application/xhtml+xml
+    AddOutputFilterByType DEFLATE application/rss+xml
+    AddOutputFilterByType DEFLATE application/javascript
+    AddOutputFilterByType DEFLATE application/x-javascript
+</IfModule>
+
+# --------------------------------------------------
+# SEGURANÇA
+# --------------------------------------------------
+
+# Prevenir acesso a arquivos sensíveis
+<FilesMatch "\.(htaccess|htpasswd|ini|log|sh|sql|conf)$">
+    Order Allow,Deny
+    Deny from all
+</FilesMatch>
+
+# Headers de segurança
 Header always set X-Frame-Options "SAMEORIGIN"
 Header always set X-Content-Type-Options "nosniff"
+Header always set Referrer-Policy "strict-origin-when-cross-origin"
+
+# --------------------------------------------------
+# PÁGINAS DE ERRO CUSTOMIZADAS
+# --------------------------------------------------
+
+ErrorDocument 404 /index.html
